--- a/htmlcss/css2.css
+++ b/htmlcss/css2.css
@@ -36,4 +36,11 @@ border-color: blueviolet;
 .padding{
     border: 5px dotted ;
     padding: 15px 20px 23px 27px;
+  
+}
+.rit{
+    width: 500px;
+    height: 500px;
+    border: solid 5px;
+   
 }
